# app/api/user/user.route.ts
@@ -8,13 +8,14 @@ import { roleAuth } from "../../common/middleware/role-auth.middleware";
 const router = Router();
 
 router
-        .get("/", userController.getAllUser)
-        .get("/:id", userController.getUserById)
+        .get("/", roleAuth(), userController.getAllUser)
+        .get("/ref-token", roleAuth(), catchError, userController.genRefToken)
+        .get("/:id", roleAuth(), userController.getUserById)
         .delete("/:id", roleAuth(), userController.deleteUser)
         .post("/", userValidator.createUser, catchError, userController.createUser)
         .post("/login", userValidator.loginUser, catchError, userController.loginUser)
-        .put("/:id", userValidator.updateUser, roleAuth(),  catchError, userController.updateUser)
-        .patch("/:id", userValidator.editUser, roleAuth(),  catchError, userController.editUser)
+        .put("/:id", roleAuth(), userValidator.updateUser,  catchError, userController.updateUser)
+        .patch("/:id", roleAuth(), userValidator.editUser,  catchError, userController.editUser)
 
 export default router;
 
